--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -7,6 +7,7 @@ dimensions:
   - name: hive
     values:
       - 2.3.9-stackable0.4.0
+      - 3.1.3-stackable0.1.0
   - name: opa
     values:
       - 0.37.2-stackable0.2.0
