--- a/examples/simple-trino-cluster-s3.yaml
+++ b/examples/simple-trino-cluster-s3.yaml
@@ -26,12 +26,28 @@ spec:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: simple-trino-s3-secret-class
+  name: simple-trino-s3-secret
   labels:
     secrets.stackable.tech/class: simple-trino-s3-secret-class
 stringData:
   accessKey: trino
   secretKey: trinotrino
+---
+apiVersion: s3.stackable.tech/v1alpha1
+kind: S3Connection
+metadata:
+  name: s3-connection-spec
+spec:
+  host: minio
+  port: 9000
+  accessStyle: Path
+  credentials:
+    secretClass: simple-trino-s3-secret-class
+#  tls:
+#    verification:
+#      server:
+#        caCert:
+#          secretClass: minio-tls-certificates
 ---
 apiVersion: hive.stackable.tech/v1alpha1
 kind: HiveCluster
@@ -40,17 +56,7 @@ metadata:
 spec:
   version: 2.3.9-stackable0.4.0
   s3:
-    inline:
-      host: minio
-      port: 9000
-      accessStyle: Path
-      credentials:
-        secretClass: simple-trino-s3-secret-class
-#      tls:
-#        verification:
-#          server:
-#            caCert:
-#              secretClass: minio-tls-certificates
+    reference: s3-connection-spec
   metastore:
     roleGroups:
       default:
@@ -74,17 +80,7 @@ spec:
   hiveConfigMapName: simple-hive-derby
   config:
     s3:
-      inline:
-        host: minio
-        port: 9000
-        accessStyle: Path
-        credentials:
-          secretClass: simple-trino-s3-secret-class
-#        tls:
-#          verification:
-#            server:
-#              caCert:
-#                secretClass: minio-tls-certificates
+      reference: s3-connection-spec
   coordinators:
     roleGroups:
       default:
