--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -2,23 +2,41 @@
 dimensions:
   - name: trino
     values:
-      #- 377-stackable0
+      - 377-stackable0
       - 387-stackable0.1.0
   - name: hive
     values:
       - 2.3.9-stackable0.4.0
   - name: opa
     values:
-      #- 0.37.2-stackable0.2.0
+      - 0.37.2-stackable0.2.0
       - 0.41.0-stackable0.1.0
   - name: s3-use-tls
     values:
       - "true"
       - "false"
+  - name: use-authentication
+    values:
+      - "true"
+      - "false"
+  - name: use-tls
+    values:
+      - "true"
+      - "false"
+  - name: use-internal-tls
+    values:
+      - "true"
+      - "false"
 tests:
-  - name: smoke
+#  - name: smoke
+#    dimensions:
+#      - trino
+#      - hive
+#      - opa
+#      - s3-use-tls
+  - name: tls
     dimensions:
       - trino
-      - hive
-      - opa
-      - s3-use-tls
+      - use-authentication
+      - use-tls
+      - use-internal-tls
