--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -52,6 +52,37 @@ spec:
                   required:
                     - method
                   type: object
+                catalogLabelSelector:
+                  description: A label selector is a label query over a set of resources. The result of matchLabels and matchExpressions are ANDed. An empty label selector matches all objects. A null label selector matches no objects.
+                  nullable: true
+                  properties:
+                    matchExpressions:
+                      description: matchExpressions is a list of label selector requirements. The requirements are ANDed.
+                      items:
+                        description: "A label selector requirement is a selector that contains values, a key, and an operator that relates the key and values."
+                        properties:
+                          key:
+                            description: key is the label key that the selector applies to.
+                            type: string
+                          operator:
+                            description: "operator represents a key's relationship to a set of values. Valid operators are In, NotIn, Exists and DoesNotExist."
+                            type: string
+                          values:
+                            description: "values is an array of string values. If the operator is In or NotIn, the values array must be non-empty. If the operator is Exists or DoesNotExist, the values array must be empty. This array is replaced during a strategic merge patch."
+                            items:
+                              type: string
+                            type: array
+                        required:
+                          - key
+                          - operator
+                        type: object
+                      type: array
+                    matchLabels:
+                      additionalProperties:
+                        type: string
+                      description: "matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels map is equivalent to an element of matchExpressions, whose key field is \"key\", the operator is \"In\", and the values array contains only \"value\". The requirements are ANDed."
+                      type: object
+                  type: object
                 coordinators:
                   nullable: true
                   properties:
@@ -159,9 +190,6 @@ spec:
                   required:
                     - roleGroups
                   type: object
-                hiveConfigMapName:
-                  nullable: true
-                  type: string
                 opa:
                   nullable: true
                   properties:
@@ -398,3 +426,55 @@ spec:
       storage: true
       subresources:
         status: {}
+---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  name: trinocatalogs.trino.stackable.tech
+  annotations:
+    helm.sh/resource-policy: keep
+spec:
+  group: trino.stackable.tech
+  names:
+    categories: []
+    kind: TrinoCatalog
+    plural: trinocatalogs
+    shortNames:
+      - trinocat
+    singular: trinocatalog
+  scope: Namespaced
+  versions:
+    - additionalPrinterColumns: []
+      name: v1alpha1
+      schema:
+        openAPIV3Schema:
+          description: "Auto-generated derived type for TrinoCatalogSpec via `CustomResource`"
+          properties:
+            spec:
+              properties:
+                configOverrides:
+                  additionalProperties:
+                    type: string
+                  default: {}
+                  type: object
+                connector:
+                  nullable: true
+                  oneOf:
+                    - required:
+                        - hive
+                  properties:
+                    hive:
+                      properties:
+                        metastoreConfigMap:
+                          nullable: true
+                          type: string
+                      type: object
+                  type: object
+              type: object
+          required:
+            - spec
+          title: TrinoCatalog
+          type: object
+      served: true
+      storage: true
+      subresources: {}
