Remove shortname trinocat

--- a/deploy/crd/trinocatalog.crd.yaml
+++ b/deploy/crd/trinocatalog.crd.yaml
@@ -9,8 +9,7 @@ spec:
     categories: []
     kind: TrinoCatalog
     plural: trinocatalogs
-    shortNames:
-      - trinocat
+    shortNames: []
     singular: trinocatalog
   scope: Namespaced
   versions:
