--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -439,8 +439,7 @@ spec:
     categories: []
     kind: TrinoCatalog
     plural: trinocatalogs
-    shortNames:
-      - trinocat
+    shortNames: []
     singular: trinocatalog
   scope: Namespaced
   versions:
