--- a/deploy/manifests/crds.yaml
+++ b/deploy/manifests/crds.yaml
@@ -440,8 +440,7 @@ spec:
     categories: []
     kind: TrinoCatalog
     plural: trinocatalogs
-    shortNames:
-      - trinocat
+    shortNames: []
     singular: trinocatalog
   scope: Namespaced
   versions:
