--- a/tests/templates/kuttl/smoke/02-assert.yaml
+++ b/tests/templates/kuttl/smoke/02-assert.yaml
@@ -1,3 +1,10 @@
+---
+apiVersion: kuttl.dev/v1beta1
+kind: TestAssert
+metadata:
+  name: upload-container
+timeout: 600
+---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
