--- a/tests/templates/kuttl/smoke/07-assert.yaml
+++ b/tests/templates/kuttl/smoke/07-assert.yaml
@@ -2,13 +2,13 @@
 apiVersion: kuttl.dev/v1beta1
 kind: TestAssert
 metadata:
-  name: install-zookeeper
-timeout: 600
+  name: install-hive
+timeout: 720
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: zookeeper-server-default
+  name: hive-metastore-default
 status:
   readyReplicas: 1
   replicas: 1
