--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -2,17 +2,23 @@
 dimensions:
   - name: trino
     values:
-      - 377-stackable0
+      # - 377-stackable0
       - 387-stackable0.1.0
   - name: hive
     values:
-      - 2.3.9-stackable0.4.0
-      - 2.3.9-stackable0.5.0
+      # - 2.3.9-stackable0.4.0
+      # - 2.3.9-stackable0.5.0
       - 3.1.3-stackable0.1.0
   - name: opa
     values:
-      - 0.37.2-stackable0.2.0
+      # - 0.37.2-stackable0.2.0
       - 0.41.0-stackable0.1.0
+  - name: hdfs
+    values:
+      - 3.2.2-stackable0.5.0
+  - name: zookeeper
+    values:
+      - 3.8.0-stackable0.7.1
   - name: s3-use-tls
     values:
       # - "true" Not supported yet
@@ -23,4 +29,6 @@ tests:
       - trino
       - hive
       - opa
+      - hdfs
+      - zookeeper
       - s3-use-tls
