--- a/rust/operator-binary/Cargo.toml
+++ b/rust/operator-binary/Cargo.toml
@@ -12,6 +12,7 @@ version = "0.5.0-nightly"
 stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.22.0" }
 stackable-trino-crd = { path = "../crd" }
 
+anyhow = "1.0"
 clap = "3.2"
 futures = { version = "0.3", features = ["compat"] }
 openssl = "0.10.41"
