--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -2,6 +2,8 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: trinoclusters.trino.stackable.tech
+  annotations:
+    helm.sh/resource-policy: keep
 spec:
   group: trino.stackable.tech
   names:
@@ -423,6 +425,7 @@ spec:
       storage: true
       subresources:
         status: {}
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
