--- a/deploy/manifests/crds.yaml
+++ b/deploy/manifests/crds.yaml
@@ -3,6 +3,8 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: trinoclusters.trino.stackable.tech
+  annotations:
+    helm.sh/resource-policy: keep
 spec:
   group: trino.stackable.tech
   names:
@@ -424,6 +426,7 @@ spec:
       storage: true
       subresources:
         status: {}
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
