Add missing role to read S3Connection objects

--- a/deploy/manifests/roles.yaml
+++ b/deploy/manifests/roles.yaml
@@ -101,3 +101,11 @@ rules:
       - trinoclusters/status
     verbs:
       - patch
+  - apiGroups:
+      - s3.stackable.tech
+    resources:
+      - s3connections
+    verbs:
+      - get
+      - list
+      - watch
