--- a/deploy/helm/trino-operator/templates/roles.yaml
+++ b/deploy/helm/trino-operator/templates/roles.yaml
@@ -101,3 +101,11 @@ rules:
       - {{ include "operator.name" . }}clusters/status
     verbs:
       - patch
+  - apiGroups:
+      - s3.stackable.tech
+    resources:
+      - s3connections
+    verbs:
+      - get
+      - list
+      - watch
