--- a/examples/simple-trino-cluster-authentication-opa-authorization.yaml
+++ b/examples/simple-trino-cluster-authentication-opa-authorization.yaml
@@ -1,36 +1,29 @@
 ---
-apiVersion: hive.stackable.tech/v1alpha1
-kind: HiveCluster
+apiVersion: trino.stackable.tech/v1alpha1
+kind: TrinoCluster
 metadata:
-  name: simple-hive-derby
+  name: simple-trino
 spec:
-  version: 2.3.9-stackable0.4.0
-  metastore:
+  version: 387-stackable0.1.0
+  opa:
+    configMapName: simple-opa
+    package: trino
+  authentication:
+    method:
+      multiUser:
+        userCredentialsSecret:
+#          namespace: default # If not specified secret from same Namespace is used
+          name: simple-trino-users-secret
+  catalogLabelSelector:
+    trino: simple-trino
+  coordinators:
     roleGroups:
       default:
-        selector:
-          matchLabels:
-            kubernetes.io/os: linux
         replicas: 1
-        config:
-          database:
-            connString: jdbc:derby:;databaseName=/tmp/metastore_db;create=true
-            user: APP
-            password: mine
-            dbType: derby
----
-apiVersion: opa.stackable.tech/v1alpha1
-kind: OpaCluster
-metadata:
-  name: simple-opa
-spec:
-  version: 0.37.2-stackable0.2.0
-  servers:
+  workers:
     roleGroups:
       default:
-        selector:
-          matchLabels:
-            kubernetes.io/os: linux
+        replicas: 1
 ---
 apiVersion: v1
 kind: Secret
@@ -44,6 +37,16 @@ stringData:
   alice: $2y$10$HcCa4k9v2DRrD/g7e5vEz.Bk.1xg00YTEHOZjPX7oK3KqMSt2xT8W
   # bob:bob
   bob: $2y$10$xVRXtYZnYuQu66SmruijPO8WHFM/UK5QPHTr.Nzf4JMcZSqt3W.2.
+---
+apiVersion: opa.stackable.tech/v1alpha1
+kind: OpaCluster
+metadata:
+  name: simple-opa
+spec:
+  version: 0.41.0-stackable0.1.0
+  servers:
+    roleGroups:
+      default: {}
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -81,34 +84,30 @@ data:
     }
 ---
 apiVersion: trino.stackable.tech/v1alpha1
-kind: TrinoCluster
+kind: TrinoCatalog
 metadata:
-  name: simple-trino
+  name: simple-hive
+  labels:
+    trino: simple-trino
 spec:
-  version: 387-stackable0.1.0
-  hiveConfigMapName: simple-hive-derby
-  opa:
-    configMapName: simple-opa
-    package: trino
-  authentication:
-    method:
-      multiUser:
-        userCredentialsSecret:
-          namespace: default
-          name: simple-trino-users-secret
-  coordinators:
+  connector:
+    hive:
+      metastore:
+        configMap: simple-hive-derby
+---
+apiVersion: hive.stackable.tech/v1alpha1
+kind: HiveCluster
+metadata:
+  name: simple-hive-derby
+spec:
+  version: 3.1.3-stackable0.1.0
+  metastore:
     roleGroups:
       default:
-        selector:
-          matchLabels:
-            kubernetes.io/os: linux
         replicas: 1
-        config: {}
-  workers:
-    roleGroups:
-      default:
-        selector:
-          matchLabels:
-            kubernetes.io/os: linux
-        replicas: 1
-        config: {}
+        config:
+          database:
+            connString: jdbc:derby:;databaseName=/tmp/metastore_db;create=true
+            user: APP
+            password: mine
+            dbType: derby
