--- a/examples/simple-trino-cluster-s3.yaml
+++ b/examples/simple-trino-cluster-s3.yaml
@@ -1,17 +1,66 @@
-# helm install commons-operator \
-#     commons-operator \
-#     --repo https://repo.stackable.tech/repository/helm-stable
-# helm install secret-operator \
-#     secret-operator \
-#     --repo https://repo.stackable.tech/repository/helm-stable
-# helm install hive-operator \
-#     hive-operator \
-#     --repo https://repo.stackable.tech/repository/helm-stable
-# helm install minio \
-#     minio \
-#     --repo https://charts.bitnami.com/bitnami \
-#     --set auth.rootUser=minio-access-key \
-#     --set auth.rootPassword=minio-secret-key
+# stackablectl operator install commons secret hive zookeeper
+# helm install minio minio --repo https://charts.bitnami.com/bitnami --set auth.rootUser=minio-access-key --set auth.rootPassword=minio-secret-key
+---
+apiVersion: trino.stackable.tech/v1alpha1
+kind: TrinoCluster
+metadata:
+  name: simple-trino
+spec:
+  version: 387-stackable0.1.0
+  catalogLabelSelector:
+    trino: simple-trino
+  coordinators:
+    roleGroups:
+      default:
+        replicas: 1
+  workers:
+    roleGroups:
+      default:
+        replicas: 1
+---
+apiVersion: trino.stackable.tech/v1alpha1
+kind: TrinoCatalog
+metadata:
+  name: simple-hive
+  labels:
+    trino: simple-trino
+spec:
+  connector:
+    hive:
+      metastore:
+        configMap: simple-hive-derby
+      s3:
+        reference: minio
+---
+apiVersion: hive.stackable.tech/v1alpha1
+kind: HiveCluster
+metadata:
+  name: simple-hive-derby
+spec:
+  version: 3.1.3-stackable0.1.0
+  metastore:
+    roleGroups:
+      default:
+        replicas: 1
+        config:
+          database:
+            connString: jdbc:derby:;databaseName=/tmp/metastore_db;create=true
+            user: APP
+            password: mine
+            dbType: derby
+  s3:
+    reference: minio
+---
+apiVersion: s3.stackable.tech/v1alpha1
+kind: S3Connection
+metadata:
+  name: minio
+spec:
+  host: minio
+  port: 9000
+  accessStyle: Path
+  credentials:
+    secretClass: simple-s3-credentials-secret-class
 ---
 apiVersion: secrets.stackable.tech/v1alpha1
 kind: SecretClass
@@ -32,61 +81,3 @@ metadata:
 stringData:
   accessKey: minio-access-key
   secretKey: minio-secret-key
----
-apiVersion: hive.stackable.tech/v1alpha1
-kind: HiveCluster
-metadata:
-  name: simple-hive-derby
-spec:
-  version: 2.3.9-stackable0.4.0
-  s3:
-    inline:
-      host: minio
-      port: 9000
-      accessStyle: Path
-      credentials:
-        secretClass: simple-s3-credentials-secret-class
-  metastore:
-    roleGroups:
-      default:
-        selector:
-          matchLabels:
-            kubernetes.io/os: linux
-        replicas: 1
-        config:
-          database:
-            connString: jdbc:derby:;databaseName=/tmp/metastore_db;create=true
-            user: APP
-            password: mine
-            dbType: derby
----
-apiVersion: trino.stackable.tech/v1alpha1
-kind: TrinoCluster
-metadata:
-  name: simple-trino
-spec:
-  version: 387-stackable0.1.0
-  hiveConfigMapName: simple-hive-derby
-  s3:
-    inline:
-      host: minio
-      port: 9000
-      accessStyle: Path
-      credentials:
-        secretClass: simple-s3-credentials-secret-class
-  coordinators:
-    roleGroups:
-      default:
-        selector:
-          matchLabels:
-            kubernetes.io/os: linux
-        replicas: 1
-        config: {}
-  workers:
-    roleGroups:
-      default:
-        selector:
-          matchLabels:
-            kubernetes.io/os: linux
-        replicas: 1
-        config: {}
