--- a/examples/simple-trino-cluster.yaml
+++ b/examples/simple-trino-cluster.yaml
@@ -1,35 +1,4 @@
 ---
-apiVersion: hive.stackable.tech/v1alpha1
-kind: HiveCluster
-metadata:
-  name: simple-hive-derby
-spec:
-  version: 2.3.9-stackable0.4.0
-  metastore:
-    roleGroups:
-      default:
-        selector:
-          matchLabels:
-            kubernetes.io/os: linux
-        replicas: 1
-        config:
-          database:
-            connString: jdbc:derby:;databaseName=/tmp/metastore_db;create=true
-            user: APP
-            password: mine
-            dbType: derby
----
-apiVersion: trino.stackable.tech/v1alpha1
-kind: TrinoCatalog
-metadata:
-  name: simple-trino-hive
-  labels:
-    trino: simple-trino
-spec:
-  connector:
-    hive:
-      metastoreConfigMap: simple-hive-derby
----
 apiVersion: trino.stackable.tech/v1alpha1
 kind: TrinoCluster
 metadata:
@@ -41,16 +10,37 @@ spec:
   coordinators:
     roleGroups:
       default:
-        selector:
-          matchLabels:
-            kubernetes.io/os: linux
         replicas: 1
-        config: {}
   workers:
     roleGroups:
       default:
-        selector:
-          matchLabels:
-            kubernetes.io/os: linux
         replicas: 1
-        config: {}
+---
+apiVersion: trino.stackable.tech/v1alpha1
+kind: TrinoCatalog
+metadata:
+  name: simple-hive
+  labels:
+    trino: simple-trino
+spec:
+  connector:
+    hive:
+      metastore:
+        configMap: simple-hive-derby
+---
+apiVersion: hive.stackable.tech/v1alpha1
+kind: HiveCluster
+metadata:
+  name: simple-hive-derby
+spec:
+  version: 3.1.3-stackable0.1.0
+  metastore:
+    roleGroups:
+      default:
+        replicas: 1
+        config:
+          database:
+            connString: jdbc:derby:;databaseName=/tmp/metastore_db;create=true
+            user: APP
+            password: mine
+            dbType: derby
