Rename Trino catalogs as they are than easier to access via SQL

--- a/examples/simple-trino-cluster-authentication-opa-authorization.yaml
+++ b/examples/simple-trino-cluster-authentication-opa-authorization.yaml
@@ -85,7 +85,7 @@ data:
 apiVersion: trino.stackable.tech/v1alpha1
 kind: TrinoCatalog
 metadata:
-  name: simple-hive
+  name: hive
   labels:
     trino: simple-trino
 spec:
