--- a/examples/simple-trino-cluster-s3.yaml
+++ b/examples/simple-trino-cluster-s3.yaml
@@ -21,7 +21,7 @@ spec:
 apiVersion: trino.stackable.tech/v1alpha1
 kind: TrinoCatalog
 metadata:
-  name: simple-hive
+  name: hive
   labels:
     trino: simple-trino
 spec:
