--- a/tests/templates/kuttl/tls/requirements.txt
+++ b/tests/templates/kuttl/tls/requirements.txt
@@ -1,115 +1,7 @@
-ansible==5.9.0
-ansible-core==2.12.6
-astroid==2.3.3
-async-generator==1.10
-attrs==21.4.0
-bcrypt==3.1.7
-blinker==1.4
-catfish==1.4.13
-certifi==2019.11.28
-cfgv==3.3.1
-chardet==3.0.4
-Click==7.0
-colorama==0.4.3
-command-not-found==0.3
-cryptography==2.8
-cupshelpers==1.0
-dbus-python==1.2.16
-defer==1.0.6
-distlib==0.3.4
-distro==1.4.0
-distro-info===0.23ubuntu1
-docker==5.0.3
-entrypoints==0.3
-filelock==3.7.0
-future==0.18.2
-gpg===1.13.1-unknown
-greenlet==1.1.2
-h11==0.13.0
-httplib2==0.14.0
-identify==2.5.1
-idna==2.8
-isort==4.3.4
-Jinja2==2.10.1
-jinja2-cli==0.8.2
-jmespath==0.9.4
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lazy-object-proxy==1.4.3
-logilab-common==1.4.3
-macaroonbakery==1.3.1
-Magnus==1.0.3
-MarkupSafe==1.1.0
-mccabe==0.6.1
-netifaces==0.10.4
-nodeenv==1.6.0
-notify2==0.3
-ntlm-auth==1.1.0
-numpy==1.22.1
-oauthlib==3.1.0
-onboard==1.4.1
-outcome==1.1.0
-packaging==20.3
-pandas==1.4.0
-paramiko==2.6.0
-pexpect==4.6.0
-platformdirs==2.5.2
-pre-commit==2.19.0
-protobuf==3.6.1
-psutil==5.5.1
-pycairo==1.16.2
-pycups==1.9.73
-PyGObject==3.36.0
-PyHive==0.6.4
-PyJWT==1.7.1
-pykerberos==1.1.14
-pylint==2.4.4
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyOpenSSL==22.0.0
-pyparsing==2.4.6
-pyRFC3339==1.1
-python-apt==2.0.0+ubuntu0.20.4.7
-python-dateutil==2.8.2
-python-debian===0.1.36ubuntu1
-python-xapp==1.8.1
-pytz==2021.3
-pyudev==0.21.0
-pywinrm==0.3.0
-PyYAML==5.3.1
-requests==2.22.0
-requests-kerberos==0.12.0
-requests-ntlm==1.1.0
-requests-unixsocket==0.2.0
-resolvelib==0.5.4
-SecretStorage==2.3.1
-selenium==4.1.0
-setproctitle==1.1.10
-simplejson==3.16.0
-six==1.14.0
-sniffio==1.2.0
-sortedcontainers==2.4.0
-SQLAlchemy==1.4.39
-sqlalchemy-trino==0.5.0
-systemd-python==234
-toml==0.10.2
+certifi==2022.6.15
+charset-normalizer==2.1.0
+idna==3.3
+pytz==2022.2.1
+requests==2.28.1
 trino==0.315.0
-trio==0.19.0
-trio-websocket==0.9.2
-ubuntu-advantage-tools==27.8
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.26.8
-usb-creator==0.3.7
-vboxapi==1.0
-virtualenv==20.14.1
-wadllib==1.3.3
-websocket-client==1.3.3
-wrapt==1.11.2
-wsproto==1.0.0
-xkit==0.0.0
-xmltodict==0.12.0
+urllib3==1.26.11
