--- a/deploy/manifests/crds.yaml
+++ b/deploy/manifests/crds.yaml
@@ -25,7 +25,6 @@ spec:
             spec:
               properties:
                 authentication:
-                  description: A reference to a secret containing username/password for defined users
                   nullable: true
                   properties:
                     method:
@@ -52,7 +51,39 @@ spec:
                   required:
                     - method
                   type: object
+                config:
+                  default:
+                    tls:
+                      secretClass: tls
+                    internalTls:
+                      secretClass: tls
+                  description: Global Trino Config for cluster settings like TLS
+                  properties:
+                    internalTls:
+                      default:
+                        secretClass: tls
+                      description: 'Only affects internal communication. Use mutual verification between Trino nodes This setting controls: - Which cert the servers should use to authenticate themselves against other servers - Which ca.crt to use when validating the other server'
+                      nullable: true
+                      properties:
+                        secretClass:
+                          type: string
+                      required:
+                        - secretClass
+                      type: object
+                    tls:
+                      default:
+                        secretClass: tls
+                      description: 'Only affects client connections. This setting controls: - If TLS encryption is used at all - Which cert the servers should use to authenticate themselves against the client'
+                      nullable: true
+                      properties:
+                        secretClass:
+                          type: string
+                      required:
+                        - secretClass
+                      type: object
+                  type: object
                 coordinators:
+                  description: Settings for the Coordinator Role/Process.
                   nullable: true
                   properties:
                     cliOverrides:
@@ -160,9 +191,11 @@ spec:
                     - roleGroups
                   type: object
                 hiveConfigMapName:
+                  description: The discovery ConfigMap name of the Hive cluster (usually the same as the Hive cluster name).
                   nullable: true
                   type: string
                 opa:
+                  description: The discovery ConfigMap name of the OPA cluster (usually the same as the OPA cluster name).
                   nullable: true
                   properties:
                     configMapName:
@@ -174,7 +207,7 @@ spec:
                     - configMapName
                   type: object
                 s3:
-                  description: Operators are expected to define fields for this type in order to work with S3 connections.
+                  description: A reference to a S3 bucket.
                   nullable: true
                   oneOf:
                     - required:
@@ -273,13 +306,15 @@ spec:
                       type: string
                   type: object
                 stopped:
-                  description: Emergency stop button, if `true` then all pods are stopped without affecting configuration (as setting `replicas` to `0` would)
+                  description: Emergency stop button, if `true` then all pods are stopped without affecting configuration (as setting `replicas` to `0` would).
                   nullable: true
                   type: boolean
                 version:
+                  description: The provided trino image version in the form `xxx-stackableY.Y.Y` e.g. `387-stackable0.1.0`.
                   nullable: true
                   type: string
                 workers:
+                  description: Settings for the Worker Role/Process.
                   nullable: true
                   properties:
                     cliOverrides:
