--- a/examples/simple-trino-cluster-s3.yaml
+++ b/examples/simple-trino-cluster-s3.yaml
@@ -1,22 +1,71 @@
-# helm install commons-operator \
-#     commons-operator \
-#     --repo https://repo.stackable.tech/repository/helm-stable
-# helm install secret-operator \
-#     secret-operator \
-#     --repo https://repo.stackable.tech/repository/helm-stable
-# helm install hive-operator \
-#     hive-operator \
-#     --repo https://repo.stackable.tech/repository/helm-stable
-# helm install minio \
-#     minio \
-#     --repo https://charts.bitnami.com/bitnami \
-#     --set auth.rootUser=trino \
-#     --set auth.rootPassword=trinotrino
+# stackablectl operator install commons secret hive zookeeper
+# helm install minio minio --repo https://charts.bitnami.com/bitnami --set auth.rootUser=minio-access-key --set auth.rootPassword=minio-secret-key
+---
+apiVersion: trino.stackable.tech/v1alpha1
+kind: TrinoCluster
+metadata:
+  name: simple-trino
+spec:
+  version: 387-stackable0.1.0
+  catalogLabelSelector:
+    trino: simple-trino
+  coordinators:
+    roleGroups:
+      default:
+        replicas: 1
+  workers:
+    roleGroups:
+      default:
+        replicas: 1
+---
+apiVersion: trino.stackable.tech/v1alpha1
+kind: TrinoCatalog
+metadata:
+  name: hive
+  labels:
+    trino: simple-trino
+spec:
+  connector:
+    hive:
+      metastore:
+        configMap: simple-hive-derby
+      s3:
+        reference: minio
+---
+apiVersion: hive.stackable.tech/v1alpha1
+kind: HiveCluster
+metadata:
+  name: simple-hive-derby
+spec:
+  version: 3.1.3-stackable0.1.0
+  metastore:
+    roleGroups:
+      default:
+        replicas: 1
+        config:
+          database:
+            connString: jdbc:derby:;databaseName=/tmp/metastore_db;create=true
+            user: APP
+            password: mine
+            dbType: derby
+  s3:
+    reference: minio
+---
+apiVersion: s3.stackable.tech/v1alpha1
+kind: S3Connection
+metadata:
+  name: minio
+spec:
+  host: minio
+  port: 9000
+  accessStyle: Path
+  credentials:
+    secretClass: simple-s3-credentials-secret-class
 ---
 apiVersion: secrets.stackable.tech/v1alpha1
 kind: SecretClass
 metadata:
-  name: simple-trino-s3-secret-class
+  name: simple-s3-credentials-secret-class
 spec:
   backend:
     k8sSearch:
@@ -26,69 +75,9 @@ spec:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: simple-trino-s3-secret
+  name: simple-s3-credentials-secret
   labels:
-    secrets.stackable.tech/class: simple-trino-s3-secret-class
+    secrets.stackable.tech/class: simple-s3-credentials-secret-class
 stringData:
-  accessKey: trino
-  secretKey: trinotrino
----
-apiVersion: s3.stackable.tech/v1alpha1
-kind: S3Connection
-metadata:
-  name: s3-connection-spec
-spec:
-  host: minio
-  port: 9000
-  accessStyle: Path
-  credentials:
-    secretClass: simple-trino-s3-secret-class
----
-apiVersion: hive.stackable.tech/v1alpha1
-kind: HiveCluster
-metadata:
-  name: simple-hive-derby
-spec:
-  version: 2.3.9-stackable0.4.0
-  s3:
-    reference: s3-connection-spec
-  metastore:
-    roleGroups:
-      default:
-        selector:
-          matchLabels:
-            kubernetes.io/os: linux
-        replicas: 1
-        config:
-          database:
-            connString: jdbc:derby:;databaseName=/tmp/metastore_db;create=true
-            user: APP
-            password: mine
-            dbType: derby
----
-apiVersion: trino.stackable.tech/v1alpha1
-kind: TrinoCluster
-metadata:
-  name: simple-trino
-spec:
-  version: 387-stackable0.1.0
-  hiveConfigMapName: simple-hive-derby
-  config:
-    s3:
-      reference: s3-connection-spec
-  coordinators:
-    roleGroups:
-      default:
-        selector:
-          matchLabels:
-            kubernetes.io/os: linux
-        replicas: 1
-        config: {}
-  workers:
-    roleGroups:
-      default:
-        selector:
-          matchLabels:
-            kubernetes.io/os: linux
-        replicas: 1
-        config: {}
+  accessKey: minio-access-key
+  secretKey: minio-secret-key
