--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -2,5 +2,6 @@ name: trino
 version: "nightly"
 title: Stackable Operator for Trino
 nav:
+  - modules/getting_started/nav.adoc
   - modules/ROOT/nav.adoc
 prerelease: true
