Update tests. S3 verification is failing

--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -2,16 +2,22 @@
 dimensions:
   - name: trino
     values:
-      - 377-stackable0
+      # - 377-stackable0
       - 387-stackable0.1.0
   - name: hive
     values:
-      - 2.3.9-stackable0.5.0
+      # - 2.3.9-stackable0.5.0
       - 3.1.3-stackable0.1.0
   - name: opa
     values:
       - 0.37.2-stackable0.2.0
-      - 0.41.0-stackable0.1.0
+      # - 0.41.0-stackable0.1.0
+  - name: hdfs
+    values:
+      - 3.2.2-stackable0.5.0
+  - name: zookeeper
+    values:
+      - 3.8.0-stackable0.7.1
   - name: s3-use-tls
     values:
       - "true"
@@ -19,25 +25,27 @@ dimensions:
   - name: use-authentication
     values:
       - "true"
-      - "false"
+      # - "false"
   - name: use-tls
     values:
       - "true"
-      - "false"
+      # - "false"
   - name: use-internal-tls
     values:
       - "true"
-      - "false"
+      # - "false"
 tests:
   - name: smoke
     dimensions:
       - trino
       - hive
       - opa
+      - hdfs
+      - zookeeper
       - s3-use-tls
-  - name: tls
-    dimensions:
-      - trino
-      - use-authentication
-      - use-tls
-      - use-internal-tls
+  # - name: tls
+  #   dimensions:
+  #     - trino
+  #     - use-authentication
+  #     - use-tls
+  #     - use-internal-tls
