--- a/tests/templates/kuttl/smoke/21-install-requirements.yaml
+++ b/tests/templates/kuttl/smoke/21-install-requirements.yaml
@@ -5,5 +5,4 @@ commands:
   - script: kubectl cp -n $NAMESPACE ./check-active-workers.py  trino-test-helper-0:/tmp
   - script: kubectl cp -n $NAMESPACE ./check-opa.py  trino-test-helper-0:/tmp
   - script: kubectl cp -n $NAMESPACE ./check-s3.py  trino-test-helper-0:/tmp
-  - script: kubectl cp -n $NAMESPACE ./requirements.txt  trino-test-helper-0:/tmp
-  - script: kubectl exec -n $NAMESPACE trino-test-helper-0 -- pip install -q -r /tmp/requirements.txt
+  - script: kubectl exec -n $NAMESPACE trino-test-helper-0 -- pip install trino
