Dont let the cp's fail the tests

--- a/tests/templates/kuttl/smoke/21-copy-scripts.yaml
+++ b/tests/templates/kuttl/smoke/21-copy-scripts.yaml
@@ -2,6 +2,6 @@
 apiVersion: kuttl.dev/v1beta1
 kind: TestStep
 commands:
-  - script: kubectl cp -n $NAMESPACE ./check-active-workers.py  trino-test-helper-0:/tmp
-  - script: kubectl cp -n $NAMESPACE ./check-opa.py  trino-test-helper-0:/tmp
-  - script: kubectl cp -n $NAMESPACE ./check-s3.py  trino-test-helper-0:/tmp
+  - script: kubectl cp -n $NAMESPACE ./check-active-workers.py  trino-test-helper-0:/tmp || true
+  - script: kubectl cp -n $NAMESPACE ./check-opa.py             trino-test-helper-0:/tmp || true
+  - script: kubectl cp -n $NAMESPACE ./check-s3.py              trino-test-helper-0:/tmp || true
