--- a/tests/templates/kuttl/smoke/05-assert.yaml
+++ b/tests/templates/kuttl/smoke/05-assert.yaml
@@ -1,14 +1,28 @@
 ---
 apiVersion: kuttl.dev/v1beta1
 kind: TestAssert
-metadata:
-  name: install-hive
-timeout: 720
+timeout: 600
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: hive-metastore-default
+  name: hdfs-namenode-default
+status:
+  readyReplicas: 2
+  replicas: 2
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: hdfs-journalnode-default
+status:
+  readyReplicas: 1
+  replicas: 1
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: hdfs-datanode-default
 status:
   readyReplicas: 1
   replicas: 1
