--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -12,6 +12,12 @@ dimensions:
     values:
       - 0.37.2-stackable0.2.0
       - 0.41.0-stackable0.1.0
+  - name: hdfs
+    values:
+      - 3.2.2-stackable0.5.0
+  - name: zookeeper
+    values:
+      - 3.8.0-stackable0.7.1
   - name: s3-use-tls
     values:
       - "true"
@@ -34,6 +40,8 @@ tests:
       - trino
       - hive
       - opa
+      - hdfs
+      - zookeeper
       - s3-use-tls
   - name: tls
     dimensions:
