--- a/deploy/manifests/crds.yaml
+++ b/deploy/manifests/crds.yaml
@@ -51,6 +51,37 @@ spec:
                   required:
                     - method
                   type: object
+                catalogLabelSelector:
+                  description: '[LabelSelector](https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/#label-selectors) selecting the Catalogs to include in the Trino instance'
+                  nullable: true
+                  properties:
+                    matchExpressions:
+                      description: matchExpressions is a list of label selector requirements. The requirements are ANDed.
+                      items:
+                        description: A label selector requirement is a selector that contains values, a key, and an operator that relates the key and values.
+                        properties:
+                          key:
+                            description: key is the label key that the selector applies to.
+                            type: string
+                          operator:
+                            description: operator represents a key's relationship to a set of values. Valid operators are In, NotIn, Exists and DoesNotExist.
+                            type: string
+                          values:
+                            description: values is an array of string values. If the operator is In or NotIn, the values array must be non-empty. If the operator is Exists or DoesNotExist, the values array must be empty. This array is replaced during a strategic merge patch.
+                            items:
+                              type: string
+                            type: array
+                        required:
+                          - key
+                          - operator
+                        type: object
+                      type: array
+                    matchLabels:
+                      additionalProperties:
+                        type: string
+                      description: matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels map is equivalent to an element of matchExpressions, whose key field is "key", the operator is "In", and the values array contains only "value". The requirements are ANDed.
+                      type: object
+                  type: object
                 config:
                   default:
                     tls:
@@ -190,10 +221,6 @@ spec:
                   required:
                     - roleGroups
                   type: object
-                hiveConfigMapName:
-                  description: The discovery ConfigMap name of the Hive cluster (usually the same as the Hive cluster name).
-                  nullable: true
-                  type: string
                 opa:
                   description: The discovery ConfigMap name of the OPA cluster (usually the same as the OPA cluster name).
                   nullable: true
@@ -205,105 +232,6 @@ spec:
                       type: string
                   required:
                     - configMapName
-                  type: object
-                s3:
-                  description: A reference to a S3 bucket.
-                  nullable: true
-                  oneOf:
-                    - required:
-                        - inline
-                    - required:
-                        - reference
-                  properties:
-                    inline:
-                      description: S3 connection definition as CRD.
-                      properties:
-                        accessStyle:
-                          description: Which access style to use. Defaults to virtual hosted-style as most of the data products out there. Have a look at the official documentation on <https://docs.aws.amazon.com/AmazonS3/latest/userguide/VirtualHosting.html>
-                          enum:
-                            - Path
-                            - VirtualHosted
-                          nullable: true
-                          type: string
-                        credentials:
-                          description: If the S3 uses authentication you have to specify you S3 credentials. In the most cases a SecretClass providing `accessKey` and `secretKey` is sufficient.
-                          nullable: true
-                          properties:
-                            scope:
-                              description: '[Scope](https://docs.stackable.tech/secret-operator/scope.html) of the [SecretClass](https://docs.stackable.tech/secret-operator/secretclass.html)'
-                              nullable: true
-                              properties:
-                                node:
-                                  default: false
-                                  type: boolean
-                                pod:
-                                  default: false
-                                  type: boolean
-                                services:
-                                  default: []
-                                  items:
-                                    type: string
-                                  type: array
-                              type: object
-                            secretClass:
-                              description: '[SecretClass](https://docs.stackable.tech/secret-operator/secretclass.html) containing the LDAP bind credentials'
-                              type: string
-                          required:
-                            - secretClass
-                          type: object
-                        host:
-                          description: Hostname of the S3 server without any protocol or port
-                          nullable: true
-                          type: string
-                        port:
-                          description: Port the S3 server listens on. If not specified the products will determine the port to use.
-                          format: uint16
-                          minimum: 0.0
-                          nullable: true
-                          type: integer
-                        tls:
-                          description: If you want to use TLS when talking to S3 you can enable TLS encrypted communication with this setting.
-                          nullable: true
-                          properties:
-                            verification:
-                              description: The verification method used to verify the certificates of the server and/or the client
-                              oneOf:
-                                - required:
-                                    - none
-                                - required:
-                                    - server
-                              properties:
-                                none:
-                                  description: Use TLS but don't verify certificates
-                                  type: object
-                                server:
-                                  description: Use TLS and ca certificate to verify the server
-                                  properties:
-                                    caCert:
-                                      description: Ca cert to verify the server
-                                      oneOf:
-                                        - required:
-                                            - webPki
-                                        - required:
-                                            - secretClass
-                                      properties:
-                                        secretClass:
-                                          description: Name of the SecretClass which will provide the ca cert. Note that a SecretClass does not need to have a key but can also work with just a ca cert. So if you got provided with a ca cert but don't have access to the key you can still use this method.
-                                          type: string
-                                        webPki:
-                                          description: Use TLS and the ca certificates trusted by the common web browsers to verify the server. This can be useful when you e.g. use public AWS S3 or other public available services.
-                                          type: object
-                                      type: object
-                                  required:
-                                    - caCert
-                                  type: object
-                              type: object
-                          required:
-                            - verification
-                          type: object
-                      type: object
-                    reference:
-                      type: string
                   type: object
                 stopped:
                   description: Emergency stop button, if `true` then all pods are stopped without affecting configuration (as setting `replicas` to `0` would).
@@ -433,3 +361,172 @@ spec:
       storage: true
       subresources:
         status: {}
+---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  name: trinocatalogs.trino.stackable.tech
+  annotations:
+    helm.sh/resource-policy: keep
+spec:
+  group: trino.stackable.tech
+  names:
+    categories: []
+    kind: TrinoCatalog
+    plural: trinocatalogs
+    shortNames: []
+    singular: trinocatalog
+  scope: Namespaced
+  versions:
+    - additionalPrinterColumns: []
+      name: v1alpha1
+      schema:
+        openAPIV3Schema:
+          description: Auto-generated derived type for TrinoCatalogSpec via `CustomResource`
+          properties:
+            spec:
+              properties:
+                configOverrides:
+                  additionalProperties:
+                    type: string
+                  default: {}
+                  type: object
+                connector:
+                  oneOf:
+                    - required:
+                        - hive
+                  properties:
+                    hive:
+                      properties:
+                        hdfs:
+                          description: Connection to an HDFS cluster
+                          nullable: true
+                          properties:
+                            configMap:
+                              description: Name of the discovery-configmap providing information about the HDFS cluster
+                              type: string
+                          required:
+                            - configMap
+                          type: object
+                        metastore:
+                          description: Mandatory connection to a Hive Metastore, which will be used as a storage for metadata
+                          properties:
+                            configMap:
+                              description: Name of the discovery-configmap providing information about the Hive metastore
+                              type: string
+                          required:
+                            - configMap
+                          type: object
+                        s3:
+                          description: Connection to an S3 store
+                          nullable: true
+                          oneOf:
+                            - required:
+                                - inline
+                            - required:
+                                - reference
+                          properties:
+                            inline:
+                              description: S3 connection definition as CRD.
+                              properties:
+                                accessStyle:
+                                  description: Which access style to use. Defaults to virtual hosted-style as most of the data products out there. Have a look at the official documentation on <https://docs.aws.amazon.com/AmazonS3/latest/userguide/VirtualHosting.html>
+                                  enum:
+                                    - Path
+                                    - VirtualHosted
+                                  nullable: true
+                                  type: string
+                                credentials:
+                                  description: If the S3 uses authentication you have to specify you S3 credentials. In the most cases a SecretClass providing `accessKey` and `secretKey` is sufficient.
+                                  nullable: true
+                                  properties:
+                                    scope:
+                                      description: '[Scope](https://docs.stackable.tech/secret-operator/scope.html) of the [SecretClass](https://docs.stackable.tech/secret-operator/secretclass.html)'
+                                      nullable: true
+                                      properties:
+                                        node:
+                                          default: false
+                                          type: boolean
+                                        pod:
+                                          default: false
+                                          type: boolean
+                                        services:
+                                          default: []
+                                          items:
+                                            type: string
+                                          type: array
+                                      type: object
+                                    secretClass:
+                                      description: '[SecretClass](https://docs.stackable.tech/secret-operator/secretclass.html) containing the LDAP bind credentials'
+                                      type: string
+                                  required:
+                                    - secretClass
+                                  type: object
+                                host:
+                                  description: Hostname of the S3 server without any protocol or port
+                                  nullable: true
+                                  type: string
+                                port:
+                                  description: Port the S3 server listens on. If not specified the products will determine the port to use.
+                                  format: uint16
+                                  minimum: 0.0
+                                  nullable: true
+                                  type: integer
+                                tls:
+                                  description: If you want to use TLS when talking to S3 you can enable TLS encrypted communication with this setting.
+                                  nullable: true
+                                  properties:
+                                    verification:
+                                      description: The verification method used to verify the certificates of the server and/or the client
+                                      oneOf:
+                                        - required:
+                                            - none
+                                        - required:
+                                            - server
+                                      properties:
+                                        none:
+                                          description: Use TLS but don't verify certificates
+                                          type: object
+                                        server:
+                                          description: Use TLS and ca certificate to verify the server
+                                          properties:
+                                            caCert:
+                                              description: Ca cert to verify the server
+                                              oneOf:
+                                                - required:
+                                                    - webPki
+                                                - required:
+                                                    - secretClass
+                                              properties:
+                                                secretClass:
+                                                  description: Name of the SecretClass which will provide the ca cert. Note that a SecretClass does not need to have a key but can also work with just a ca cert. So if you got provided with a ca cert but don't have access to the key you can still use this method.
+                                                  type: string
+                                                webPki:
+                                                  description: Use TLS and the ca certificates trusted by the common web browsers to verify the server. This can be useful when you e.g. use public AWS S3 or other public available services.
+                                                  type: object
+                                              type: object
+                                          required:
+                                            - caCert
+                                          type: object
+                                      type: object
+                                  required:
+                                    - verification
+                                  type: object
+                              type: object
+                            reference:
+                              type: string
+                          type: object
+                      required:
+                        - metastore
+                      type: object
+                  type: object
+              required:
+                - connector
+              type: object
+          required:
+            - spec
+          title: TrinoCatalog
+          type: object
+      served: true
+      storage: true
+      subresources: {}
