--- a/tests/templates/kuttl/smoke/04-assert.yaml
+++ b/tests/templates/kuttl/smoke/04-assert.yaml
@@ -1,14 +1,12 @@
 ---
 apiVersion: kuttl.dev/v1beta1
 kind: TestAssert
-metadata:
-  name: install-postgres
 timeout: 600
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: hive-postgresql
+  name: zookeeper-server-default
 status:
   readyReplicas: 1
   replicas: 1
