--- a/tests/templates/kuttl/smoke/06-assert.yaml
+++ b/tests/templates/kuttl/smoke/06-assert.yaml
@@ -1,8 +1,12 @@
 ---
 apiVersion: kuttl.dev/v1beta1
 kind: TestAssert
+timeout: 600
+---
+apiVersion: apps/v1
+kind: StatefulSet
 metadata:
-  name: install-opa
-timeout: 300
-commands:
-  - script: kubectl -n $NAMESPACE rollout status daemonset opa-server-default --timeout 300s
+  name: hive-postgresql
+status:
+  readyReplicas: 1
+  replicas: 1
