--- a/examples/simple-trino-cluster-resource-limits.yaml
+++ b/examples/simple-trino-cluster-resource-limits.yaml
@@ -5,6 +5,7 @@ metadata:
   name: simple-trino
 spec:
   version: 387-stackable0.1.0
+  catalogLabelSelector: {}
   coordinators:
     roleGroups:
       default:
