Add support for Trino 395-stackable0.1.0 and 396-stackable0.1.0

--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -4,6 +4,8 @@ dimensions:
     values:
       - 377-stackable0
       - 387-stackable0.1.0
+      - 395-stackable0.1.0
+      - 396-stackable0.1.0
   - name: hive
     values:
       - 2.3.9-stackable0.5.0
