Add support for TPCH connector and TPCDS connector

--- a/deploy/crd/trinocatalog.crd.yaml
+++ b/deploy/crd/trinocatalog.crd.yaml
@@ -32,6 +32,10 @@ spec:
                         - hive
                     - required:
                         - iceberg
+                    - required:
+                        - tpcds
+                    - required:
+                        - tpch
                   properties:
                     hive:
                       properties:
@@ -278,6 +282,10 @@ spec:
                           type: object
                       required:
                         - metastore
+                      type: object
+                    tpcds:
+                      type: object
+                    tpch:
                       type: object
                   type: object
               required:
