--- a/deploy/manifests/crds.yaml
+++ b/deploy/manifests/crds.yaml
@@ -1193,6 +1193,10 @@ spec:
                         - hive
                     - required:
                         - iceberg
+                    - required:
+                        - tpcds
+                    - required:
+                        - tpch
                   properties:
                     hive:
                       properties:
@@ -1439,6 +1443,10 @@ spec:
                           type: object
                       required:
                         - metastore
+                      type: object
+                    tpcds:
+                      type: object
+                    tpch:
                       type: object
                   type: object
               required:
